# kindle-streamer

./: README.md  create_art.py  main.py  ocr.py  pyproject.toml  show_art_server.py  windowlist  windowlist.m
chopping_block/: index.py  list_apps.py  terminal.py
